<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/idNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/note_craft"
        android:textColor="@color/orange"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/idChangeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/idNote"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:adjustViewBounds="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/add_note"
        android:src="@drawable/baseline_apps_24" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idListNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/idNote"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/item_note" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/floating_action_tooltip"
        android:src="@drawable/baseline_add_24"
        android:tint="@color/white"
        android:tooltipText="@string/floating_action_tooltip" />

</RelativeLayout>