<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idNoteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/idTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="2"
                android:text="@string/str_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/idContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="3"
            android:shadowColor="@color/white"
            android:text="@string/str_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/idCreatedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:shadowColor="@color/white"
            android:text="@string/str_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/idUpdatedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:shadowColor="@color/black"
            android:text="@string/str_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.cardview.widget.CardView>